Day5/network-policy/allow-traffic-from-external.yml
# Default deny (blocks everything not explicitly allowed)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: jegan 
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: []                      # empty = deny all

---
# Then allow only from ingress
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-controller
  namespace: jegan 
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-ingress
    ports:
    - protocol: TCP
      port: 8080
